# sv2-uniffi

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cpp-bindings.yml  python-bindings.yml  rust.yml
cpp/: CMakeLists.txt  README.md
cpp/examples/: bootstrap_extended_channel_server_example.cpp  bootstrap_standard_channel_server_example.cpp  client_example.cpp  example_utils.hpp  extranonce_allocator_example.cpp  server_example.cpp  tcp_utils.hpp  template_distribution_example.cpp
cpp/scripts/: generate-linux.sh  generate-macos.sh
cpp/tests/: test_encoding_decoding.cpp  test_error_handling.cpp  test_extended_channel_server.cpp  test_extranonce_allocator.cpp  test_handshake.cpp  test_import.cpp  test_message_creation.cpp  test_share_accounting.cpp  test_utils.hpp
python/: README.md  requirements.txt  setup.py
python/examples/: __init__.py  bootstrap_extended_channel_server_example.py  bootstrap_standard_group_channel_server_example.py  client_example.py  extranonce_allocator_example.py  extranonce_prefix_factory_example.py  server_example.py  static_example.py  template_distribution_example.py
python/scripts/: generate-linux.sh  generate-macos.sh
python/tests/: __init__.py  extranonce_prefix_factory_test.py  test_all.py  test_encoding_decoding.py  test_error_handling.py  test_examples.py  test_extended_channel_server.py  test_extranonce_allocator.py  test_handshake.py  test_import.py  test_message_creation.py  test_share_accounting.py
src/: lib.rs
src/channels/: mod.rs  txout.rs
src/channels/extranonce/: allocator.rs  mod.rs  prefix.rs
src/channels/server/: chain_tip.rs  error.rs  extended.rs  extranonce_prefix.rs  group.rs  mod.rs  share_accounting.rs  share_validation.rs  standard.rs
src/channels/server/jobs/: error.rs  extended.rs  mod.rs  standard.rs
src/codec/: decoder.rs  encoder.rs  error.rs  mod.rs  state.rs
src/messages/: common.rs  error.rs  extension.rs  job_declaration.rs  mining.rs  mod.rs  template_distribution.rs
