[package]
name = "sv2-uniffi"
version = "0.1.0"
edition = "2018"

[dependencies]
codec_sv2 = { version = "2.1.0", default-features = true, features = ["noise_sv2"] }
channels_sv2 = "0.1.0"
parsers_sv2 = "0.1.0"
common_messages_sv2 = "5.0.0"
mining_sv2 = "4.0.0"
job_declaration_sv2 = "4.0.0"
template_distribution_sv2 = "3.1.0"

uniffi = { version = "0.29.3", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.29.3", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "sv2"