[package]
name = "sv2-uniffi"
version = "0.1.0"
edition = "2018"

[dependencies]
codec_sv2 = { git = "https://github.com/plebhash/stratum", branch = "2025-08-06-update-standard-channel-with-extended-job", default-features = true, features = ["noise_sv2", "with_buffer_pool"] }
#channels_sv2 = "0.1.0"
channels_sv2 = { git = "https://github.com/plebhash/stratum", branch = "2025-08-06-update-standard-channel-with-extended-job" }
parsers_sv2 = { git = "https://github.com/plebhash/stratum", branch = "2025-08-06-update-standard-channel-with-extended-job" }
common_messages_sv2 = { git = "https://github.com/plebhash/stratum", branch = "2025-08-06-update-standard-channel-with-extended-job" }
mining_sv2 = { git = "https://github.com/plebhash/stratum", branch = "2025-08-06-update-standard-channel-with-extended-job" }
job_declaration_sv2 = { git = "https://github.com/plebhash/stratum", branch = "2025-08-06-update-standard-channel-with-extended-job" }
template_distribution_sv2 = { git = "https://github.com/plebhash/stratum", branch = "2025-08-06-update-standard-channel-with-extended-job" }

bitcoin = { version = "0.32.5" }

uniffi = { version = "0.29.3", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.29.3", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
crate-type = ["cdylib"]
name = "sv2"