[package]
name = "sv2-uniffi"
version = "0.1.0"
edition = "2018"

# todo: use crates.io for SRI crates
# https://github.com/stratum-mining/sv2-uniffi/issues/12
[dependencies]
codec_sv2 = { git = "https://github.com/stratum-mining/stratum", rev = "2bd3073c7241a6a4355de30a120bea1b2bc69fa3", features = ["noise_sv2", "with_buffer_pool"] }
channels_sv2 = { git = "https://github.com/stratum-mining/stratum", rev = "2bd3073c7241a6a4355de30a120bea1b2bc69fa3" }
parsers_sv2 = { git = "https://github.com/stratum-mining/stratum", rev = "2bd3073c7241a6a4355de30a120bea1b2bc69fa3" }
common_messages_sv2 = { git = "https://github.com/stratum-mining/stratum", rev = "2bd3073c7241a6a4355de30a120bea1b2bc69fa3" }
mining_sv2 = { git = "https://github.com/stratum-mining/stratum", rev = "2bd3073c7241a6a4355de30a120bea1b2bc69fa3" }
job_declaration_sv2 = { git = "https://github.com/stratum-mining/stratum", rev = "2bd3073c7241a6a4355de30a120bea1b2bc69fa3" }
template_distribution_sv2 = { git = "https://github.com/stratum-mining/stratum", rev = "2bd3073c7241a6a4355de30a120bea1b2bc69fa3" }
noise_sv2 = { git = "https://github.com/stratum-mining/stratum", rev = "2bd3073c7241a6a4355de30a120bea1b2bc69fa3" }
binary_sv2 = { git = "https://github.com/stratum-mining/stratum", rev = "2bd3073c7241a6a4355de30a120bea1b2bc69fa3" }
extensions_sv2 = { git = "https://github.com/stratum-mining/stratum", rev = "2bd3073c7241a6a4355de30a120bea1b2bc69fa3" }

bitcoin = { version = "0.32.5" }

uniffi = { version = "=0.29.4", features = ["cli"] }

[build-dependencies]
uniffi = { version = "=0.29.4", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
crate-type = ["cdylib"]
name = "sv2"
